fix(gloss,css): make long descriptions visible.

--- a/scss/_gloss.scss
+++ b/scss/_gloss.scss
@@ -44,7 +44,7 @@ dl.glossary > dd.glossary-short {
   padding-left: 5px;
 }
 dl.glossary > dd.glossary-short > span.glossary-heading,
-dl.glossary > dd.glossary-long {
+dl.glossary > dd.glossary-long > span.glossary-heading {
   display: none;
 }
 
